# night-voyager

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  DESIGN.md  Dockerfile.api  Dockerfile.proof  LICENSE  Makefile  README.md  README_CN.md  SECURITY.md  build-constraints.txt  compose.yaml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
docs/: README.md
docs/decisions/: 0001-identity-session-and-rls-boundary.md  0002-deterministic-planning-and-evidence-authority.md  0003-advisor-family-decision-authority.md  0004-durable-agent-task-authority.md  0005-mke-readonly-evidence-boundary.md  0006-connected-demo-bff-authority.md  0007-dra-governed-mixed-evidence-boundary.md  0008-governed-collaboration-and-memory-authority.md  0009-versioned-skill-runtime-pinning.md  0010-explicit-planning-start-authority.md
docs/design/: demo-storyboard.md  projection-matrix.md  route-map.md  state-and-interaction-matrix.md
docs/how-to/: verify-v0.1.0-release.md  verify-v0.1.1-release.md  verify-v0.1.2-release.md  verify-v0.1.3-release.md
docs/operations/: collaboration-authority.md  collaboration-walkthrough.md  connected-demo.md  database-roles.md  dra-consumer-proof.md  mke-candidate-proof.md  skill-governance.md  worker-and-sse.md
docs/reference/: agent-tasks-and-events.md  collaboration-and-confirmed-facts.md  domain-and-source-manifests.md  dra-governed-evidence.md  http-api-v1.md  mke-readonly-consumer.md  versioned-skills-and-runtime-pins.md
docs/releases/: v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.1.3.md
docs/superpowers/: README.md
fixtures/dra/: downstream-consumer-contract-v1.json  manifest.json
fixtures/m3a/: manifest.json
fixtures/m4a/: manifest.json
fixtures/m4b/: candidate-artifact-lock.json  manifest.json  smoke-assertions.json
fixtures/skills/: eval-manifest-v1.json  runtime-manifest-v1.json
migrations/: env.py  script.py.mako
migrations/versions/: 0001_identity_and_rls.py  0002_case_evidence_planning.py  0003_advisor_family_decision.py  0004_agent_tasks_executions_events.py  0005_dra_candidate_promotion.py  0006_governed_mixed_planning.py  0007_conversation_and_memory.py  0008_versioned_skills.py  0009_explicit_planning_start_authority.py
scripts/: __init__.py  doctor.sh  generate_m4b_fixture.py  register_skill_version.py  run_collaboration_db_tests.sh  run_db_tests.sh  run_dra_lane.sh  run_mke_lane.sh  run_skill_db_tests.sh  seed_demo.py  seed_dra_proof.py  verify_collaboration_flow.py  verify_compose.sh  verify_demo_identity.py  verify_dra_consumer.py  verify_dra_governed_flow.py  verify_fact_to_plan_flow.py  verify_m3b_flow.py  verify_m4a_flow.py  verify_mke_consumer.py  verify_release.py
src/night_voyager/: __init__.py  api.py  config.py  database.py  worker.py
tests/architecture/: test_bootstrap_contract.py  test_collaboration_contract.py  test_collaboration_database_runner.py  test_compose_contract.py  test_dependency_direction.py  test_documentation_governance.py  test_dra_contract.py  test_fact_to_plan_contract.py  test_m2_contract.py  test_m3a_contract.py  test_m3b_contract.py  test_m4a_contract.py  test_m4b_contract.py  test_m5_contract.py  test_portfolio_presentation_contract.py  test_security_dependency_contract.py  test_skills_contract.py  (+4 more)
web/: .dockerignore  Dockerfile  Dockerfile.e2e  package-lock.json  package.json  playwright.compose.config.ts  playwright.config.ts  vitest.config.ts
web/app/: layout.tsx  (+3 more)
(+333 files in other folders)
