[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "night-voyager"
version = "0.1.0"
description = "Bootstrap foundation for Night Voyager"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "MIT"
dependencies = [
  "fastapi>=0.128,<0.129",
  "pydantic-settings>=2.10,<3",
  "uvicorn[standard]>=0.35,<1",
]

[dependency-groups]
dev = [
  "build>=1.3,<2",
  "httpx>=0.28,<1",
  "pyright>=1.1.400,<2",
  "pytest>=9.0.3,<10",
  "ruff>=0.12,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/night_voyager"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src", "tests", "scripts"]
