[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "night-voyager"
version = "0.1.1"
description = "Evidence-grounded advisor-to-family decision workflow with durable Agent tasks"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "MIT"
dependencies = [
  "alembic>=1.18.5,<1.19",
  "asyncpg>=0.31,<0.32",
  "fastapi>=0.139,<0.140",
  "pydantic-settings>=2.10,<3",
  "sqlalchemy>=2.0.51,<2.1",
  "starlette>=1.3.1,<1.4",
  "uvicorn[standard]>=0.51.0,<1",
]

[project.optional-dependencies]
dra = ["httpx2>=2.5,<2.6"]
mke = ["mcp>=1.28.1,<2"]

[dependency-groups]
dev = [
  "build>=1.3,<2",
  "httpx2>=2,<3",
  "pyright>=1.1.400,<2",
  "pytest>=9.0.3,<10",
  "pytest-asyncio>=1.4,<2",
  "ruff>=0.12,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/night_voyager"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "database: requires disposable PostgreSQL 18 roles",
  "mke: requires the optional MKE/MCP process extra",
]
addopts = '-m "not database and not mke"'

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src", "tests", "scripts"]
exclude = [
  "src/night_voyager/adapters/mke_readonly.py",
  "tests/fixtures/m4b/fake_mke_server.py",
  "tests/integration/adapters/test_mke_candidate_wheel.py",
  "tests/integration/adapters/test_mke_readonly_smoke.py",
]
